src/objects/Movie__c.object
<CustomObject>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genres__c</fullName>
        <label>Genres</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Adventure</fullName>
                </value>
                <value>
                    <fullName>Animation</fullName>
                </value>
                <value>
                    <fullName>Comedy</fullName>
                </value>
                <value>
                    <fullName>Crime</fullName>
                </value>
                <value>
                    <fullName>Documentary</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Fantasy</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Horror</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Mystery</fullName>
                </value>
                <value>
                    <fullName>Romance</fullName>
                </value>
                <value>
                    <fullName>Science Fiction</fullName>
                </value>
                <value>
                    <fullName>TV Movie</fullName>
                </value>
                <value>
                    <fullName>Thriller</fullName>
                </value>
                <value>
                    <fullName>War</fullName>
                </value>
                <value>
                    <fullName>Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Homepage__c</fullName>
        <label>Homepage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Poster_path__c</fullName>
        <label>Poster path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_companies__c</fullName>
        <label>Production companies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_date__c</fullName>
        <label>Release date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Runtime__c</fullName>
        <description>Time in minutes</description>
        <label>Runtime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Movie</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>